--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -7,6 +7,13 @@ pl:
         restrict_dependent_destroy:
           has_many: Nie może zostać usunięte, gdyż istnieją zależne od niego %{record}
           has_one: Nie może zostać usunięte, gdyż istnieje zależny od niego %{record}
+
+    attributes:
+      post:
+        tag_list: Tagi
+        title: Tytuł
+        description: Opis
+
   date:
     abbr_day_names:
     - nie
