--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1,5 +1,10 @@
 ---
 pl:
+  views:
+    pagination:
+      next: Następne
+      previous: Poprzednie
+
   activerecord:
     errors:
       messages:
